<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spinning Cat</string>
    <string name="intro">No ads, intuitive, offline/online modes\nwith lots of free features and… cats?</string>
    <string name="info">Welcome to Spinning Cat, your free workout app where you can track your training and see guides of each training</string>
    <string name="policy">By proceeding you confirm that you have read and agreed to Spinning Cat"'"s <a href="http://141.253.193.187/politicas/Policies.html">Terms of Service</a> and <a href="http://141.253.193.187/politicas/Policies.html">Privacy Policy</a>.</string>
    <string name="newUser">New User:</string>
    <string name="joinApp">Join Spinning Cat</string>
    <string name="returningUser">Returning User:</string>
    <string name="login">Login Here</string>
    <string name="loginProfile">Login Here</string>
    <string name="tvNickname">Nickname:</string>
    <string name="tvName">Name:</string>
    <string name="tvSurnames">Surnames:</string>
    <string name="tvEmail">Email:</string>
    <string name="tvPassword">Password:</string>
    <string name="tvConfirmPassword">Confirm Password:</string>
    <string name="tvDate">Birthdate:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="filtrar" tools:ignore="MissingTranslation">Filtrate</string>
    <string name="login2">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="client">Client</string>
    <string name="trainer">Trainer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gotoRegister"><a href="">You don"'"t have an account yet?</a></string>
    <string name="userRegistration">Register New User:</string>
    <string name="alreadyAccount"><a href="">Already have an account? Log in</a></string>
    <string name="register">Register User</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="userNotFound">User does not exist</string>
    <string name="userFound">User already exists</string>
    <string name="invalidPasswd">Password is incorrect</string>
    <string name="emailExists">Error: Email is already registered.</string>
    <string name="fill">Fill in all fields</string>
    <string name="unmatch">Passwords do not match</string>
    <string name="accountCreated">Account successfully created</string>
    <string name="accountCreationError">Error creating account</string>
    <string name="dbError">Error accessing database</string>
    <string name="usersError">Error retrieving users</string>
    <string name="filter_by_level">Filter by level</string>
    <string name="goback">Return</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="apellidos">Surname</string>
    <string name="fecha_nacimiento">Birthdate</string>
    <string name="cambiar_tema">Change theme mode</string>
    <string name="guardar">Save</string>
    <string name="volver">Go back</string>
    <string name="perfil_guardado">Profile saved successfully!</string>
    <string name="error_campos">Please complete all fields correctly</string>
    <string name="nombre_del_workout">Workout name</string>
    <string name="workout" translatable="false">Workout</string>
    <string name="user_level">User level: 1</string>
    <string name="trainerWorkout">Trainer</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="filter_by_levelWorkout">Filter by level</string>
    <string name="level">Level: 1</string>
    <string name="tiempo_total_00_00_00">Time: 00:00:00</string>
    <string name="expected_time_00_00_00">Expected time: 00:00:00</string>
    <string name="date_2025_01_01">Date: 2025-01-01</string>
    <string name="play">Play</string>
    <string name="completed_100">% Finished: 100</string>
    <string name="ver_workouts">See all Workouts</string>
    <string name="trainee">Trainee</string>
    <string name="ejsTotales">Exercises</string>
    <string name="porcentaje">Finished percentage</string>
    <string name="entrenador">Trainer</string>
    <string name="logout">Log out</string>
    <string name="logo_gimnasio">Gym logo</string>
    <string name="lista_de_workouts">List of workouts:</string>
    <string name="el_video_se_abrir_en_youtube">The video is being opened in Youtube</string>
    <string name="anadir_workout">Add Workout</string>
    <string name="ver_ejercicios">View exercises</string>
    <string name="ver_video_en_youtube">Watch video in YouTube</string>
    <string name="reproducir_video_del_workout">▶ Play video of the Workout</string>
    <string name="volverVideo">Return</string>
    <string name="ejercicios">Exercises:</string>
    <string name="anadir_workoutDialog">Add Workout</string>
    <string name="nombreWorkout">Workout Name:</string>
    <string name="nivel">Level:</string>
    <string name="ejercicio_1">Exercise 1:</string>
    <string name="ejercicio_2">Exercise 2:</string>
    <string name="ejercicio_3">Exercise 3:</string>
    <string name="cancelar">Cancel</string>
    <string name="crear">Create</string>
    <string name="descripcion_del_ejercicio">Description of the exercise</string>
    <string name="tvType">User type:</string>
    <string name="edit">Edit</string>
    <string name="nombreEjercicio">Exercise name</string>
    <string name="series">Sets:</string>
    <string name="nombreApellido">Name and Surname</string>
    <string name="user_level_label">User level: %d</string>

</resources>