<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Profile">
    <!-- Todos los elementos dentro del scrollview-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Avatar y editar -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/gatetepesas"
                    android:src="@drawable/gatetepesas" />

                <ImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignEnd="@+id/ivAvatar"
                    android:layout_alignBottom="@+id/ivAvatar"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_edit" />
            </RelativeLayout>

            <!-- Nombre y login -->
            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="Nombre Apellido"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="login"
                android:textColor="@color/gray" />

            <!-- Inputs de edición -->
            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="nombre" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_nacimiento" />

            <!-- Cambios de tema e idioma -->
            <Switch
                android:id="@+id/switchTema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_tema" />

            <!-- Botones -->

            <Spinner
                android:id="@+id/spinnerIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volver" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
